--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
